Fix alignment of site title text

--- a/src/sass/typography/_headings.scss
+++ b/src/sass/typography/_headings.scss
@@ -41,8 +41,8 @@ h6 {
 }
 
 .site-title {
+	margin-top: 0;
 	margin-bottom: 20px;
-	padding-top: 25px;
 	font-family: $font__site-header;
 	@include font-size( 6.0 );
 	line-height: 1.3;
